gcc/testsuite/gfortran.dg/pr93603.f90
! { dg-do compile }

program p
  associate (y => z'1') ! { dg-error "cannot be a BOZ literal constant" }
  end associate         ! { dg-error "Expecting END PROGRAM" }
end

